feat: read CORS allowed origins from CORS_ALLOWED_ORIGINS env var